--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "modnarjs",
-  "version": "1.0.4",
-  "description": "╭─ ~                                                                     ✔ ─╮ ╰─ git remote -v                                                             ─╯ fatal: not a git repository (or any of the parent directories): .git",
+  "version": "1.0.5",
+  "description": "Use to generate fake data for your project",
   "main": "modnarjs.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MRSamBadiei/modnarjs.git"
   },
-  "keywords": [],
+  "keywords": ["modnar","modnarjs","random","javascript","typescript","string","generate"],
   "author": "Sam Badiei",
   "license": "MIT",
   "bugs": {
